# authentik-webfinger-proxy

./: Dockerfile  README.md  docker-compose.example.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: cliff.toml  renovate.json  renovate.json5
.github/ISSUE_TEMPLATE/: bug.yml  enhancement.yml
.github/workflows/: build-and-push.yml  ci.yml  codeql.yml  dependency-review.yml  devcontainer-smoke.yml  lint-pr.yml  python-lint.yml  python-version-test.yml  release.yml  renovate-uv-lock.yml  renovate.yml  scorecard.yml  trivy-scan.yml  uv-lock-check.yml
app/: __init__.py  app.py  requirements.txt
tests/: test_app.py
